--- a/html-css/module_08/style/main.css
+++ b/html-css/module_08/style/main.css
@@ -147,6 +147,8 @@ header{
 .m_b_button:focus{
     background-color: rgba(255, 255, 255, 0);
     border: 2px solid var(--text-color-white);
+    /* Убираем границу вокруг ссылок  */
+    outline: none; 
 }
 /*---------- Шапка сайта -----------*/
 
@@ -242,6 +244,8 @@ header{
     background-color: var(--color-red);
     border-color: #ffffff;
     color: #ffffff;
+    /* Убираем границу вокруг ссылок  */
+    outline: none; 
 }
 /*---------- Центральная часть сайта -----------*/
 
