--- a/html-css/module_08/style/main.css
+++ b/html-css/module_08/style/main.css
@@ -148,7 +148,7 @@ header{
     background-color: rgba(255, 255, 255, 0);
     border: 2px solid var(--text-color-white);
     /* Убираем границу вокруг ссылок  */
-    outline: none; 
+    outline: none !important; 
 }
 /*---------- Шапка сайта -----------*/
 
@@ -245,7 +245,7 @@ header{
     border-color: #ffffff;
     color: #ffffff;
     /* Убираем границу вокруг ссылок  */
-    outline: none; 
+    outline: none !important; 
 }
 /*---------- Центральная часть сайта -----------*/
 
