--- a/html-css/module_08/style/main.css
+++ b/html-css/module_08/style/main.css
@@ -148,7 +148,9 @@ header{
     background-color: rgba(255, 255, 255, 0);
     border: 2px solid var(--text-color-white);
     /* Убираем границу вокруг ссылок  */
-    outline: none !important; 
+    outline-style: none;
+    outline-width: 0px !important;
+    outline-color: none !important;
 }
 /*---------- Шапка сайта -----------*/
 
@@ -245,7 +247,9 @@ header{
     border-color: #ffffff;
     color: #ffffff;
     /* Убираем границу вокруг ссылок  */
-    outline: none !important; 
+    outline-style: none;
+    outline-width: 0px !important;
+    outline-color: none !important;
 }
 /*---------- Центральная часть сайта -----------*/
 
