--- a/html-css/module_09/style/style.css
+++ b/html-css/module_09/style/style.css
@@ -45,11 +45,10 @@ h1,h2,h3,h4{
     margin: 0;
 }
 
-/* .container {
-    max-width: 280px;
+.container {
     margin: 0 auto;
     text-align: center;
-} */
+}
 
 /*---------- Шапка сайта -----------*/
 /* Верхний блок шапки сайта */
@@ -153,6 +152,95 @@ header{
     outline: none; 
 }
 /*---------- Шапка сайта -----------*/
+
+/*---------- Центральная часть сайта -----------*/
+
+/* Отступы блока сверху снизу */
+.main_body{
+    padding: 50px 0;
+}
+
+.main_title{
+    padding-bottom: 20px;
+}
+
+.card_item{
+    display: block;
+    width: 200px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.card_avatar{
+    display: inline-block;
+    margin-bottom: 12px;
+    border-radius: 50%;
+}
+
+.card_avatar_wrapper:after{
+    display: block;
+    position: absolute;
+    content: " ";
+    width: 40px;
+    height: 40px;
+    transform: translate(125px, -50px);
+    border: 4px solid var(--text-color-white);
+    border-radius: 50%;
+}
+
+.icon_1:after{
+    background: url(../img/icon/icon-1.jpg) center;
+}
+
+.icon_2:after{
+    background: url(../img/icon/icon-2.jpg) center;
+}
+
+.icon_3:after{
+    background: url(../img/icon/icon-3.jpg) center;
+}
+
+.icon_4:after{
+    background: url(../img/icon/icon-4.jpg) center;
+}
+
+
+.card_name{
+    padding-bottom: 8px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.card_text{
+    padding: 0 7px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 13px;
+    color: var(--text-color-gray);
+}
+
+.foot_btn{
+    padding: 10px 40px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    color: var(--color-red);
+    background-color: #ffffff;
+    border: 2px solid var(--color-red);
+    border-radius: 30px;
+}
+
+/* Добавил focus для мобильной версии сайта */
+.foot_btn:hover,
+.foot_btn:focus{
+    background-color: var(--color-red);
+    border-color: #ffffff;
+    color: #ffffff;
+    /* Убираем границу вокруг ссылок  */
+    outline: none; 
+}
+/*---------- Центральная часть сайта -----------*/
 
 
 /*---------- Медиазапрос для планшетов -----------*/
