--- a/html-css/module_09/style/style.css
+++ b/html-css/module_09/style/style.css
@@ -162,11 +162,14 @@ header{
 
 .main_title{
     padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .card_item{
     display: block;
     width: 200px;
+    margin: 0 auto;
     padding-bottom: 30px;
     text-align: center;
 }
