--- a/html-css/module_09/style/style.css
+++ b/html-css/module_09/style/style.css
@@ -45,10 +45,10 @@ h1,h2,h3,h4{
     margin: 0;
 }
 
-.container {
+/* .container {
     margin: 0 auto;
     text-align: center;
-}
+} */
 
 /*---------- Шапка сайта -----------*/
 /* Верхний блок шапки сайта */
@@ -78,8 +78,6 @@ header{
 }
 
 .e_menu{
-    display: flex;
-    justify-content: center;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -93,7 +91,6 @@ header{
     font-weight: 600;
     font-size: 12px;
     color: var(--text-color-white);
-    /* Убираем границу вокруг ссылок  */
     outline: none; 
 }
 
@@ -103,7 +100,6 @@ header{
     border-radius: 20px;
 }
 
-/* Добавил focus для мобильной версии сайта */
 .sing_up:hover,
 .sing_up:focus{
     background-color: rgba(32, 31, 31, 0.246);
@@ -143,21 +139,18 @@ header{
     color: var(--text-color-white);
 }
 
-/* Добавил focus для мобильной версии сайта */
 .m_b_button:hover,
 .m_b_button:focus{
     background-color: rgba(255, 255, 255, 0);
     border: 2px solid var(--text-color-white);
-    /* Убираем границу вокруг ссылок  */
     outline: none; 
 }
 /*---------- Шапка сайта -----------*/
 
 /*---------- Центральная часть сайта -----------*/
-
-/* Отступы блока сверху снизу */
 .main_body{
     padding: 50px 0;
+    text-align: center;
 }
 
 .main_title{
@@ -166,12 +159,17 @@ header{
     padding-right: 20px;
 }
 
+.card_list{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 .card_item{
     display: block;
     width: 200px;
     margin: 0 auto;
     padding-bottom: 30px;
-    text-align: center;
 }
 
 .card_avatar{
@@ -234,13 +232,11 @@ header{
     border-radius: 30px;
 }
 
-/* Добавил focus для мобильной версии сайта */
 .foot_btn:hover,
 .foot_btn:focus{
     background-color: var(--color-red);
     border-color: #ffffff;
     color: #ffffff;
-    /* Убираем границу вокруг ссылок  */
     outline: none; 
 }
 /*---------- Центральная часть сайта -----------*/
@@ -248,10 +244,6 @@ header{
 
 /*---------- Медиазапрос для планшетов -----------*/
 @media (min-width: 768px){
-    /* .container {
-        max-width: 530px;
-    } */
-
     header{
         background: url(../img/bg-1440.jpg) center no-repeat;
     }
@@ -260,13 +252,8 @@ header{
         padding-bottom: 140px;
     }
 
-    .logo{
-        text-align: unset;
-    }
-
     .e_menu{
         padding-bottom: 0px;
-        justify-content: flex-end;
     }
 
     .m_b_title{
