--- a/html-css/module_10_add_task/style/style.css
+++ b/html-css/module_10_add_task/style/style.css
@@ -1,3 +1,11 @@
+:root{
+    --shadow-material-design: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+a{
+    color: rgb(0, 0, 0);
+}
+
 .container {
     max-width: 960px;
     margin: 0 auto;
@@ -5,22 +13,23 @@
 }
 
 .title{
-    padding-bottom: 30px;
-    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-top: 40px;
 }
 
 img{
     display: inline-block;
+    box-shadow: var(--shadow-material-design);
 }
-picture{
-    margin: 0 auto;
-}
+
 /* Задание 2 */
 .box {
     width: 400px;
     height: 200px;
     margin: 0 auto;
     background: url('https://placeimg.com/400/200/arch') no-repeat;
+    box-shadow: var(--shadow-material-design);
+    border: 1px;
   }
 
   /* min-resolution: 192dpi - Минимальная плотность экрана Retina */
@@ -28,6 +37,42 @@ picture{
     .box {
         background: url('https://placeimg.com/800/400/people') no-repeat;
     }
+}
+
+/* Задание 3 */
+.header{
+    width: 400px;
+    margin: 0 auto;
+    border: 1px solid;
+    border-radius: 8px;
+    margin-bottom: 40px;
+}
+
+.logo{
+    padding: 30px;
+    border-radius: 8px 8px 0 0;
+    background: url('https://placeimg.com/400/200/arch') no-repeat;
+    opacity: 0.7;
+}
+
+.logo__link{
+    color: white;
+}
+
+.nav{
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+}
+
+.nav__item{
+    padding: 10px 20px 10px;
+    font-size: 18px;
+}
+
+.nav__item:hover{
+    box-shadow: var(--shadow-material-design);
+    border-radius: 10px;
 }
   
   
