--- a/html-css/module_10/style/style.css
+++ b/html-css/module_10/style/style.css
@@ -1,3 +1,383 @@
-body{
-    background-color: lightslategrey;
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,600&display=swap');
+
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'Kaushan Script', cursive; */
+
+:root{
+    --color-red: #f38181;
+    --color-yellow: #fce38a;
+    --color-green: #eaffd0;
+    --color-blue: #95e1d3;
+    --color-white: #ffffff;
+    --linear-gradient-orange: linear-gradient(to top,rgba(252,227,138,0.8), rgba(243,129,129,0.8));
+    --text-color-ligtblue: #95e1d3;
+    --text-color-gray: #999999;
+    --text-color-darkgray: #333333;
+    --color-pink: #f38181;
+    --bg-color-orange: #fce38a;
+    --modal-linear-gradient: linear-gradient(to top,rgba(252,227,138,0.8), rgba(243,129,129,0.8));
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+}
+/* Заголовки секций сайта */
+.headline{
+    display: block;
+    text-align: center;
+    color: var(--text-color-darkgray);
+    padding-bottom: 41px;
+}
+
+.headline_first{
+    font-family: 'Kaushan Script', cursive;
+    font-size: 24px;
+    font-weight: 300;
+    padding-bottom: 10px;
+}
+
+.headline_second{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-bottom: 27px;
+}
+  
+.headline_second::after{
+    display: block;
+    margin: auto;
+    content: "";
+    height: 3px;
+    width: 60px;
+    margin-top: 32px;
+    background-color:  var(--color-pink);
+}
+
+.headline_text{
+    display: inline-block;
+    width: 940px;
+    color: #999999;
+    margin-bottom: 55px;
+}
+
+/* Шапка сайта */
+.main_head{
+    height: 1000px;
+    background: var(--linear-gradient-orange);  
+}
+
+.main_head:before{
+    content: "";
+    position: absolute;
+    height: inherit;
+    width: 100%;
+    background: url(../img/head-banner-small.jpg) no-repeat center;
+    background-size: cover;
+    z-index: -1;
+}
+
+.head_block{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-top: 30px;
+    padding-bottom:100px; 
+}
+
+.logo{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.logo__link{
+    color: var(--color-white);
+}
+
+.nav_menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.link_list{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 0;/*Убираем отступы у списка*/
+    padding: 0;/*Убираем отступы у списка*/
+    padding-bottom: 0px;
+}
+
+.link_list__item{
+    text-align: center;
+    width: 100px;
+}
+
+.link_list__item:last-child{
+    padding-right: 0;
+}
+
+.nav_link{
+    display: inline-block;
+    color: var(--color-white);
+}
+
+.link_list__item:hover>.nav_link{
+    color: var(--color-yellow);
+}
+
+.link_list__item:hover::after{
+    display: block;
+    content: "";
+    position: absolute;
+    transform: translateX(50%);
+    height: 3px;
+    width: 50px;
+    margin-top: 10px;
+    background-color: var(--color-yellow);
+}
+
+.sl_list{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 0;/*Убираем отступы у списка*/
+    padding: 0;/*Убираем отступы у списка*/
+    padding-bottom: 0px;
+}
+
+.sl_list__item{
+    padding: 0 20px;
+}
+
+.i_link__icon{
+    height: 17px;
+    width: 17px;
+    fill: var(--color-white);
+}
+
+.i_link__icon--hover:hover{
+    fill: var(--color-yellow);
+}
+
+/* тело сайта */
+main{
+    padding-bottom: 80px;
+    padding-top:30px; 
+}
+
+/* Карточки Amazing Services */
+.card_list{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0;
+    text-transform: uppercase;
+    margin: 0;/*Убираем отступы у списка*/
+    padding: 0;/*Убираем отступы у списка*/
+}
+
+.card_list li{
+    margin-bottom: 80px; 
+}
+
+.card_item{
+    display: flex;
+    justify-content: flex-start;
+    width: 380px;
+    /* height: 66px; */
+}
+
+.card_icon{
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    background-repeat:no-repeat;
+    background-position:top center;
+}
+
+.card_container{
+    display: inline-block;
+    width: 260px;
+    text-align: start;
+}
+
+.card_title{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    color: var(--text-color-darkgray);
+    text-transform: uppercase;
+    margin: 0;
+    /* margin-top: -4px; */
+    margin-bottom: 15px;
+}
+
+.card_text{
+    font-size: 10px;
+    text-transform: none;
+}
+
+/* Карточки TEAM */
+.team_list{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    list-style: none;
+    margin: 0;/*Убираем отступы у списка*/
+    padding: 0;/*Убираем отступы у списка*/
+}
+
+.team_items{
+    display: inline-block;
+    width: 380px;
+    height: 550px;
+    text-align: center;
+}
+
+.team_items:hover>.team_modal{
+    /* display: block; */
+    opacity: 1; /*Использовал opacity так как несрабатывал transition*/
+    transform: translate(-10px, -10px);
+}
+
+.team_items:hover>.team_img{
+    transform: translate(-10px, -10px);
+    box-shadow: 10px 10px 0px 0px var(--text-color-ligtblue);
+}
+
+/* Модальное окно */
+.team_modal{
+    /* display: none; */
+    opacity: 0; /*Использовал opacity так как несрабатывал transition*/
+    position: absolute;
+    width: 380px;
+    height: 470px;
+    z-index: 1;
+    background: var(--modal-linear-gradient);
+    transition: 0.2s linear;
+}
+
+.team_m_list{
+    display: flex;
+    height: 470px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    list-style: none;
+    font-size: 0;
+    margin: 0;/*Убираем отступы у списка*/
+    padding: 0;/*Убираем отступы у списка*/
+}
+
+.team_m_item{
+    border-right: 1px solid var(--color-pink);
+}
+
+.team_m_item:last-child{
+    border-right: 0;
+}
+
+.team_m_btn{
+    display: inline-block;
+    padding: 16px;
+    width: 55px;
+    height: 55px;
+    border: 0;
+    background: var(--bg-color-orange);
+    color: var(--color-pink);
+}
+
+.team_m_btn>i{
+    font-size: 25px;
+}
+
+.team_m_btn:hover{
+    background: var(--text-color-ligtblue);
+}
+
+.team_img{
+    width: 380px;
+    height: 470px;
+    margin-bottom: 27px;
+    transition: 0.2s linear;
+}
+
+.team_name{
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 7px;
+}
+
+.team_profession{
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+/* футер сайта */
+.footer{
+    height: 63px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid var(--text-color-gray);
+}
+
+.foot_text{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    color: var(--text-color-darkgray);
+}
+
+.foot_link{
+    color: var(--color-pink);
+}
+
+.subscripe_wrapper{
+    display: inline-block;
+    font-size: 0;
+}
+
+input[type="email"]{
+    width: 230px;
+    height: 40px;
+    font-style: italic;
+    border: 0;
+    border-left: 1px solid var(--text-color-gray);
+    border-top:  1px solid var(--text-color-gray);
+    border-bottom:  1px solid var(--text-color-gray);
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    color: var(--text-color-gray);
+    text-indent: 1em;
+}
+
+input[type="submit"]{
+    width: 150px;
+    height: 40px;
+    border: 0;
+    background-color: var(--text-color-ligtblue);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+    color: white;
 }
