--- a/html-css/module_10/style/style.css
+++ b/html-css/module_10/style/style.css
@@ -79,12 +79,13 @@ font-family: 'Kaushan Script', cursive; */
 
 .headline__button{
     height: 40px;
-    padding: 10px 50px;
+    padding: 10px 20px;
     border: 2px solid var(--color-white);
     background-color: rgba(255, 255, 255, 0);
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     font-size: 12px;
+    text-transform: uppercase;
     color: var(--text-color-white);
 }
 
