module 10 add Retina media

--- a/html-css/module_10/style/style.css
+++ b/html-css/module_10/style/style.css
@@ -463,3 +463,9 @@ input[type="submit"]{
     font-weight: 700;
     color: white;
 }
+
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    .main_head--add_back:before{
+        background: url(../img/head-banner-lagre.jpg) no-repeat center;
+    }
+}
