--- a/html-css/module_10/style/style.css
+++ b/html-css/module_10/style/style.css
@@ -1,8 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,600&display=swap');
-
-/* font-family: 'Montserrat', sans-serif;
-font-family: 'Kaushan Script', cursive; */
-
 :root{
     --color-red: #f38181;
     --color-yellow: #fce38a;
@@ -119,9 +114,15 @@ font-family: 'Kaushan Script', cursive; */
 
 /* Обертка-шапка сайта */
 .head_block{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
     padding-top: 30px;
     padding-bottom:120px; 
 }
@@ -140,15 +141,25 @@ font-family: 'Kaushan Script', cursive; */
 
 /* Обертка навигации сайта */
 .nav_menu{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 /* Блок навигации по страницам сайта */
 .link_list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     list-style: none;
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
@@ -181,7 +192,9 @@ font-family: 'Kaushan Script', cursive; */
     display: block;
     content: "";
     position: absolute;
-    transform: translateX(50%);
+    -webkit-transform: translateX(50%);
+        -ms-transform: translateX(50%);
+            transform: translateX(50%);
     height: 3px;
     width: 50px;
     margin-top: 10px;
@@ -190,8 +203,12 @@ font-family: 'Kaushan Script', cursive; */
 
 /* Блок-обертка для кнопок */
 .sl_list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     list-style: none;
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
@@ -236,9 +253,14 @@ main{
 
 /* Блок-обертка для карточек Amazing Services */
 .card_list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     list-style: none;
     font-family: 'Montserrat', sans-serif;
     font-size: 0;
@@ -261,7 +283,9 @@ main{
 .card_container--before::before{
     display: block;
     position: absolute;
-    transform: translateX(-60px);
+    -webkit-transform: translateX(-60px);
+        -ms-transform: translateX(-60px);
+            transform: translateX(-60px);
     padding: 12px;
 }
 
@@ -309,9 +333,13 @@ main{
 
 /*  Блок-обертка для карточек TEAM */
 .team_list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -327,12 +355,17 @@ main{
 .team_items:hover>.team_modal{
     /* display: block; */
     opacity: 1; /*Использовал opacity так как несрабатывал transition*/
-    transform: translate(-10px, -10px);
+    -webkit-transform: translate(-10px, -10px);
+        -ms-transform: translate(-10px, -10px);
+            transform: translate(-10px, -10px);
 }
 
 .team_items:hover>.team_items__img{
-    transform: translate(-10px, -10px);
-    box-shadow: 10px 10px 0px 0px var(--text-color-ligtblue);
+    -webkit-transform: translate(-10px, -10px);
+        -ms-transform: translate(-10px, -10px);
+            transform: translate(-10px, -10px);
+    -webkit-box-shadow: 10px 10px 0px 0px var(--text-color-ligtblue);
+            box-shadow: 10px 10px 0px 0px var(--text-color-ligtblue);
 }
 
 /* Модальное окно */
@@ -343,15 +376,24 @@ main{
     height: 470px;
     z-index: 1;
     background: var(--modal-linear-gradient);
+    -webkit-transition: 0.2s linear;
+    -o-transition: 0.2s linear;
     transition: 0.2s linear;
 }
 
 .team_m_list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 470px;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
     list-style: none;
     font-size: 0;
     margin: 0;/*Убираем отступы у списка*/
@@ -394,6 +436,8 @@ main{
     width: 380px;
     height: 470px;
     margin-bottom: 27px;
+    -webkit-transition: 0.2s linear;
+    -o-transition: 0.2s linear;
     transition: 0.2s linear;
 }
 
@@ -415,9 +459,15 @@ main{
 /* футер сайта */
 .footer{
     height: 63px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border-top: 1px solid var(--text-color-gray);
 }
 
@@ -464,7 +514,7 @@ input[type="submit"]{
     color: white;
 }
 
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+@media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi) {
     .main_head--add_back:before{
         background: url(../img/head-banner-lagre.jpg) no-repeat center;
     }
