--- a/html-css/module_10/style/style.css
+++ b/html-css/module_10/style/style.css
@@ -179,17 +179,15 @@
 .nav_link{
     display: inline-block;
     color: var(--color-white);
-    width: 100px;
+    /* width: 100px; */
+    padding: 0 10px;
 }
 
-.nav_link--hover:hover{
-    color: var(--color-yellow);
-}
-
-.nav_link--hover:hover::after{
+/* .nav_link--hover:hover::after{
     display: block;
     content: "";
     position: absolute;
+    text-align: center;
     -webkit-transform: translateX(50%);
         -ms-transform: translateX(50%);
             transform: translateX(50%);
@@ -197,6 +195,23 @@
     width: 50px;
     margin-top: 10px;
     background-color: var(--color-yellow);
+} */
+
+.nav_link--hover::after{
+    display: block;
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 50px;
+    margin-top: 10px;
+    background-color: var(--color-yellow);
+    transform: scaleX(0);
+    transition: transform 200ms ease-in-out;
+}
+
+.nav_link--hover:hover::after{
+    color: var(--color-yellow);
+    transform: scaleX(1);
 }
 
 /* Блок-обертка для кнопок */
@@ -407,11 +422,11 @@ main{
     background: var(--color-red);
 }
 
-.item_link--hover:hover>.i_link__icon{
+.item_link--hover:hover>.social_icon{
     fill: var(--color-white);
 }
 
-.i_link__icon--resize_red{
+.social_icon{
     width: 25px;
     height: 25px;
     fill: var(--color-red);
