--- a/html-css/module_10/style/style.css
+++ b/html-css/module_10/style/style.css
@@ -200,9 +200,8 @@
 .nav_link--hover::after{
     display: block;
     content: "";
-    position: absolute;
     height: 3px;
-    width: 50px;
+    width: 100%;
     margin-top: 10px;
     background-color: var(--color-yellow);
     transform: scaleX(0);
