--- a/html-css/module_10/style/style.css
+++ b/html-css/module_10/style/style.css
@@ -1,5 +1,3 @@
-
-
 :root{
     --color-red: #f38181;
     --color-yellow: #fce38a;
@@ -166,6 +164,7 @@
     margin: 0;
     padding: 0;
     padding-bottom: 0px;
+    margin-top: 10px;
 }
 
 .link_list__item{
@@ -197,7 +196,7 @@
     background-color: var(--color-yellow);
 } */
 
-.nav_link--hover::after{
+.nav_link::after{
     display: block;
     content: "";
     height: 3px;
@@ -206,6 +205,10 @@
     background-color: var(--color-yellow);
     transform: scaleX(0);
     transition: transform 200ms ease-in-out;
+}
+
+.nav_link:hover{
+    color: var(--color-yellow);
 }
 
 .nav_link--hover:hover::after{
