module 10 global edits 5

--- a/html-css/module_10/style/style.css
+++ b/html-css/module_10/style/style.css
@@ -108,6 +108,12 @@
     z-index: -1;
 }
 
+@media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi) {
+    .main_head:before{
+        background: url(../img/head-banner-lagre.jpg) no-repeat center;
+    }
+}
+
 /* Обертка-шапка сайта */
 .head_block{
     display: -webkit-box;
@@ -517,8 +523,3 @@ main{
     color: var(--color-white);
 }
 
-@media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi) {
-    .main_head--add_back:before{
-        background: url(../img/head-banner-lagre.jpg) no-repeat center;
-    }
-}
