--- a/html-css/module_11/src/sass/components/submenu.scss
+++ b/html-css/module_11/src/sass/components/submenu.scss
@@ -1,17 +1,12 @@
 /* Обертка навигации сайта */
 .nav_menu{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     /* Блок навигации по страницам сайта */
     .link_list{
         @extend %list-type-vertical-menu;
+        @include font(Montserrat, 12px, 700, uppercase );
         // margin-top: 10px;
         .link_list__item{
             text-align: center;
@@ -46,6 +41,7 @@
     /* Блок-обертка для кнопок */
     .sl_list{
         @extend %list-type-vertical-menu;
+        @include font(Montserrat, 12px, 700, uppercase );
         padding-bottom: 0px;
         &__item{
             padding: 0 20px;
