--- a/html-css/module_11/src/sass/utils/functions.scss
+++ b/html-css/module_11/src/sass/utils/functions.scss
@@ -1,12 +1,8 @@
 %list-type-vertical-menu{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
+    flex-wrap: wrap;
     list-style: none;
-    @include font(Montserrat, 12px, 700, uppercase );
     margin: 0;
     padding: 0;
 }
