--- a/html-css/module_11/src/sass/utils/functions.scss
+++ b/html-css/module_11/src/sass/utils/functions.scss
@@ -6,3 +6,13 @@
     margin: 0;
     padding: 0;
 }
+
+%list-type-vertical-menu-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
